# flyingDiscSimulator

./: CMakeLists.txt  LICENSE
post-process/: test.ipynb
src/: aero.f90  core.f90  main.f90  math.f90  operator_matmul.f90  time_integrator.f90  transformation.f90  types.f90
